--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "starter",
-  "version": "0.1.0",
+  "version": "yarn add react",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@iconscout/react-unicons": "^2.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "emailjs": "^4.0.3",
+    "framer-motion": "^11.2.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.1.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -34,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/ZainRk/portfolio-starter",
+  "author": "Muhammad Shakeel <49273972+Shakeel6432@users.noreply.github.com>",
+  "license": "MIT"
 }
