--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.9.0",
     "swiper": "^11.1.4",
